feat: add worker whoami API
